# model-trust-scorecard

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml  requirements-dev.txt  requirements.txt  trust_scores.db  trust_scores.json  trust_scores.md
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
benchmarks/: gpqa.json  gsm8k.json  helm_results.json  humaneval.json  lm_eval_harness_results.json  math.json  mmlu.json  opencompass_results.json  slm_bench_results.json  swe_bench_verified.json  truthfulqa.json
docs/: index.html
models/: aion-labs-aion-2-0.json  anthropic-claude-mythos-preview.json  anthropic-claude-opus-4-6-fast.json  anthropic-claude-opus-4-6.json  anthropic-claude-opus-4-7.json  anthropic-claude-sonnet-4-6.json  arcee-ai-trinity-large-thinking.json  autoglm-phone-multilingual.json  bytedance-seed-2-0-lite.json  bytedance-seed-2-0-mini.json  claude-opus-4.5.json  cogito-14b.json  cogito-2.1-671b-cloud.json  cogvideox-3.json  cogview-4-250304.json  deepcoder.json  deepseek-r1-14b.json  deepseek-v3.2.json  deepseek-v4-flash-cloud.json  deepseek-v4-pro-high.json  deepseek-v4-pro.json  devstral-2-123b-cloud.json  embeddinggemma.json  gemini-2.5-pro.json  gemma3-4b.json  glm-4-32b-0414-128k.json  glm-4-5-air.json  glm-4-5-airx.json  glm-4-5-flash.json  glm-4-5.json  glm-4-5v.json  glm-4-6.json  glm-4-6v-flash.json  glm-4-6v-flashx.json  glm-4-6v.json  glm-4-7-flash.json  glm-4-7-flashx.json  glm-4-7.json  glm-4-plus.json  glm-5-1.json  (+68 more)
scripts/: aggregate.py  build_matrix.py  extract_claims.py  generate_dashboard.py  verify.py
tests/: conftest.py  test_aggregate.py  test_build_matrix.py  test_claim_extractor.py  test_dashboard.py  test_external_source_adapters.py  test_pipeline_sources.py  test_platform_sources.py  test_ranking.py  test_reporting.py  test_scoring.py  test_verification_engine.py
trust_scorecard/: __init__.py  __main__.py  claim_extractor.py  models.py  persistence.py  pipeline.py  ranking.py  reporting.py  scoring.py  (+2 more)
(+17 files in other folders)
